# newServer

language/lua/: build  c2lua.cpp  c2lua.lua  lua2c.cpp  run1  run2  test.lua
net/: build  client.cpp  stcpclient.cpp
test/: DynamicActivity.xml  Makefile.am  a.cpp  init.sh  main.cpp  run
tool/: 2016-7-31.txt  init.sh  run
tool/TimerWork/: main.cpp  run
tool/auto/: Data.h  Define.h  Obj.h  ReflectData.h  Template.h  build  (+7 more)
trunk/server/sdk/: CornJob.cpp  CornJob.h  LuaSystem.h  Makefile  Makefile.am  Makefile.in  Task.h  UserTest.cpp  UserTest.h  VarList.h  XmlFile.cpp  XmlFile.h  XmlFile.lo  libsdk.la  sCompress.h  sDefine.h  sEpoll.cpp  sEpoll.h  sLogManager.h  sLogManager.lo  sMemPool.h  sProtobuf.h  sPthread.h  sSctpPool.cpp  sSctpPool.h  sSctpPthread.cpp  sSctpPthread.h  sSctpScoket.cpp  sSctpScoket.h  sServer.cpp  sServer.h  sTask.cpp  sTask.h  sTask.lo  sTime.h  sdk.h
trunk/server/sdk/.deps/: UserTest.Plo  UserTest.Po  XmlFile.Plo  sEpoll.Plo  sEpoll.Po  sLogManager.Plo  sLogManager.Po  sMutex.Plo  sMutex.Po  sPthreadPool.Plo  sPthreadPool.Po  sSctpPool.Plo  sSctpPool.Po  sSctpPthread.Plo  sSctpPthread.Po  sSctpScoket.Plo  sSctpScoket.Po  sTask.Plo  sTask.Po  sTime.Plo  sTime.Po
trunk/server/sdk/.libs/: libsdk.lai  libsdk.so.0.0.0
trunk/server/sdk/ai/: AICheckRuleAction.h  AIExecuteRuleAction.h  AINode.h  AISystem.h  CompareRule.h  build  run  tags
trunk/server/sdk/base/: CompressManage.cpp  CompressManage.h  EventCallBack.h  HelpFunction.cpp  HelpFunction.h  JsonManager.cpp  JsonManager.h  LogManager.cpp  LogManager.h  LuaSystem.cpp  Mutex.h  Pthread.h  PthreadPool.cpp  PthreadPool.h  StringHelp.h  Task.cpp  Time.h  Tool.h  VarList.h  XmlFile.cpp  XmlFile.h  sCompress.cpp  sCompress.h  sLogManager.cpp  sMutex.h  sPthread.h  sPthreadPool.cpp  sPthreadPool.h  sTime.h  sUid.h
trunk/server/sdk/net/: Epoll.cpp  Epoll.h  Protobuf.h  SctpClient.h  SctpPool.cpp  SctpPool.h  SctpPthread.cpp  SctpPthread.h  SctpSocket.cpp  SctpSocket.h  Server.cpp  Server.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  sEpoll.cpp  sEpoll.h  sProtobuf.h  sSctpPool.h  sSctpPthread.h  sSctpSocket.cpp  sSctpSocket.h  sServer.cpp  sServer.h  sSocket.cpp  sSocket.h
trunk/server/sdk/third_part/redis/: .main.cpp.swp  Redis.h  run
trunk/server/test/: DynamicActivity.xml  Makefile  Makefile.am  Makefile.in  head.h  main  main.cpp  main1.cpp  test.pb.cc  test.pb.h  test.proto
trunk/server/test/.deps/: main.Po
(+65 files in other folders)
